--- a/ProyectoBasico/exes/resources.cfg
+++ b/ProyectoBasico/exes/resources.cfg
@@ -2,5 +2,5 @@
 
 # Los [nombre] seran los nombres de los grupos
 # A continuacion se definiran los miembros de ese grupo
-[ninja]
+[Ninja]
 FileSystem=resources/meshes
