--- a/ProyectoBasico/Projects/Application/Application.vcxproj
+++ b/ProyectoBasico/Projects/Application/Application.vcxproj
@@ -27,13 +27,13 @@
     <ClInclude Include="..\..\src\Application\Header Files\GmInputComponent.h" />
     <ClInclude Include="..\..\src\Application\Header Files\InitOgre.h" />
     <ClInclude Include="..\..\src\Application\Header Files\OgreApp.h" />
+    <ClInclude Include="..\..\src\Application\Header Files\PlayerInputComponent.h" />
     <ClInclude Include="..\..\src\Application\Header Files\RenderComponent.h" />
     <ClInclude Include="..\..\src\Application\Header Files\RenderUtilities.h" />
     <ClInclude Include="..\..\src\Application\Header Files\Scene.h" />
     <ClInclude Include="..\..\src\Application\Header Files\TimeManager.h" />
     <ClInclude Include="..\..\src\Application\Header Files\weirdTimer.h" />
     <ClInclude Include="Convenio.h" />
-    <ClInclude Include="PlayerInputComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Application\Source Files\Application.cpp" />
@@ -44,12 +44,12 @@
     <ClCompile Include="..\..\src\Application\Source Files\GmInputComponent.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\InitOgre.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\OgreApp.cpp" />
+    <ClCompile Include="..\..\src\Application\Source Files\PlayerInputComponent.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\RenderComponent.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\RenderUtilities.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\Scene.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\TimeManager.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\weirdTimer.cpp" />
-    <ClCompile Include="PlayerInputComponent.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
